--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,87 @@
-.block {
-  display: flex;
-  width: 100%;
-  height: 60%;
-  background-color: #00ff22;
+html {
+  font-family: "Roboto", sans-serif;
 }
-.block__element {
-  color: blue;
+
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.button {
+  width: 220px;
+  height: 50px;
+  border-radius: 25px;
+  border-width: 0px;
+  background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  box-shadow: 0px 5px 15px 5px #bbbbbb;
+  color: white;
+}
+
+.header {
+  font-family: "Shrikhand", cursive;
+  height: 60px;
+  font-size: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .header {
+    justify-content: flex-start;
+    padding-left: 20px;
+    padding-top: 20px;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.company-info {
+  display: flex;
+  background-color: #e2dddd;
+  height: 335px;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+@media screen and (min-width: 768px) {
+  .company-info {
+    width: 500px;
+    margin-top: 10px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 15px 5px #bbbbbb;
+  }
+}
+.company-info__location {
+  display: flex;
+  position: relative;
+  bottom: 2px;
+  justify-content: center;
+  align-items: center;
+  background-color: #d3cfcf;
+  height: 45px;
+  width: 100%;
+  font-weight: bold;
+  box-shadow: 0px 5px 2px -1px #bbbbbb inset;
+}
+.company-info__location i {
+  padding-right: 10px;
+}
+@media screen and (min-width: 768px) {
+  .company-info__location {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: 0px 5px 2px -1px #bbbbbb;
+  }
+}
+.company-info__title {
+  font-weight: bold;
+  font-size: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
