--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,15 +1,10 @@
-@import "./utils/variables";
-
-
-
-.block {
-    display: flex;
-    width: 100%;
-    height: 60%;
-    background-color: $color-primary;
-   
-    &__element {
-        color: blue;
-        
-    }
+html{
+    font-family: 'Roboto', sans-serif;
 }
+@import "./base/box-sizing";
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./components/buttons";
+@import "./pages/multi-page";
+@import "./pages/main-page";
+
