--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,9 +1,16 @@
-.button{
+.button {
     width: 220px;
     height: 50px;
     border-radius: 25px;
     border-width: 0px;
-    background-image: linear-gradient(to bottom right, $color-secondary, $color-primary);
+    background: linear-gradient(to bottom right, $color-secondary, $color-primary);
     @include area-shadow;
     color: white;
+
+    &:hover {
+        cursor: pointer;
+        background: linear-gradient(to bottom right, $color-secondary-dark, $color-primary-dark);
+        @include area-shadow-darker;
+    }
+
 }
