--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,9 @@
-html{
-    font-family: 'Roboto', sans-serif;
-}
+
+@import "./base/typography";
 @import "./base/box-sizing";
 @import "./utils/variables";
 @import "./utils/mixins";
 @import "./components/buttons";
-@import "./pages/multi-page";
+@import "./layouts/header";
 @import "./pages/main-page";
 
