--- a/sass/pages/_main-page.scss
+++ b/sass/pages/_main-page.scss
@@ -1,48 +1,165 @@
 * {
     margin: 0;
     padding: 0;
-  }
-  
+}
 
-
-.company-info{
+main {
     display: flex;
-    background-color: rgb(226, 221, 221);
-    height: 335px;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
-    @include large-screen{
-        width: 500px;
-        margin-top: 10px;
-        border-radius: 20px;
-        @include area-shadow;
+
+    @include large-screen {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        gap: 40px;
+       
     }
-    
-    &__location{
+}
+
+
+.company-info {
+    @include section-block;
+    gap: 50px;
+    background-color: rgb(226, 221, 221);
+
+    @include large-screen {
+        margin-right: 20px;
+    }
+
+    &__location {
         display: flex;
         position: relative;
         bottom: 2px;
         justify-content: center;
         align-items: center;
-        background-color: rgb(211, 207, 207);
+        background-color: $color-gray;
         height: 45px;
         width: 100%;
         font-weight: bold;
         box-shadow: 0px 5px 2px -1px rgb(187, 187, 187) inset;
-        i{
+
+        i {
             padding-right: 10px;
         }
-        @include large-screen{
+
+        @include large-screen {
             border-top-left-radius: 20px;
             border-top-right-radius: 20px;
-            box-shadow: 0px 5px 2px -1px rgb(187, 187, 187) ;
-           
+            box-shadow: 0px 5px 2px -1px rgb(187, 187, 187);
+
         }
-        
+
     }
-    &__title{
+
+    &__title {
         font-weight: bold;
         font-size: 25px;
     }
+}
+
+.how-it-works {
+    @include section-block;
+    font-weight: bold;
+    font-size: 25px;
+    padding-top: 50px;
+    align-items: flex-start;
+    padding-left: 20px;
+
+    @include large-screen {
+        padding-top: 10px;
+        align-items: center;
+    }
+
+    p {
+        padding-bottom: 20px;
+
+    }
+
+    ol {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        list-style: none;
+    }
+
+    &__numbers {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        color: white;
+        font-size: 13px;
+        background-color: $color-primary;
+        position: relative;
+        right: 12px;
+        padding-top: 4px;
+
+
+    }
+
+    li {
+        display: flex;
+        align-self: center;
+        border-radius: 20px;
+        width: 350px;
+        height: 70px;
+        font-size: 15px;
+        @include area-shadow;
+        background-color: $color-gray;
+        padding-top: 25px;
+        padding-right: 50px;
+
+        i {
+            font-size: 20px;
+            color: gray;
+            padding-left: 15px;
+            padding-right: 30px;
+        }
+
+
+
+    }
+
+
+
+}
+
+.restaurants{
+    width: 100%;
+    height: 1000px;
+    background-color: $color-gray;
+    font-weight: bold;
+    font-size: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  
+    p{
+        align-self: flex-start;
+        padding-top: 40px;
+        padding-left: 8%;
+        padding-bottom: 25px;
+       
+        @include large-screen{
+            align-self: center;
+            padding-left: 0;
+           
+        }
+    }
+
+    
+}
+
+.card-1{
+    @include area-shadow;
+    background-color: white;
+    width: 350px;
+    height: 265px;
+    border-radius: 20px;
+   
 }
