--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -8,3 +8,26 @@
     box-shadow: 0px 5px 15px 5px rgb(187, 187, 187);
     
 }
+
+@mixin area-shadow-darker {
+    box-shadow: 0px 5px 15px 8px rgb(187, 187, 187);
+    
+}
+
+@mixin section-block {
+    display: flex;
+    height: 470px;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+   
+
+    @include large-screen {
+        width: 600px;
+        height: 390px;
+        margin-top: 10px;
+        border-radius: 20px;
+        @include area-shadow;
+        background-color: $color-gray;
+    }
+}
