--- a/sass/pages/_main-page.scss
+++ b/sass/pages/_main-page.scss
@@ -14,7 +14,7 @@ main {
         align-items: flex-start;
         flex-wrap: wrap;
         gap: 40px;
-       
+
     }
 }
 
@@ -128,7 +128,7 @@ main {
 
 }
 
-.restaurants{
+.restaurants {
     width: 100%;
     height: 1000px;
     background-color: $color-gray;
@@ -138,28 +138,83 @@ main {
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-  
-    p{
+
+    p {
         align-self: flex-start;
         padding-top: 40px;
         padding-left: 8%;
         padding-bottom: 25px;
-       
-        @include large-screen{
+
+        @include large-screen {
             align-self: center;
             padding-left: 0;
-           
+
         }
     }
 
-    
+
 }
 
-.card-1{
+.card-1 {
     @include area-shadow;
     background-color: white;
     width: 350px;
     height: 265px;
     border-radius: 20px;
-   
+
+    img {
+        height: 170px;
+        object-fit: fill;
+
+    }
+
+    &__container {
+        height: 50px;
+        padding-left: 12px;
+        padding-top: 12px;
+
+        h3 {
+            font-size: 25px;
+            width: 200px;
+
+        }
+
+        p {
+            padding: 0px;
+            font-size: 20px;
+            font-weight: normal;
+        }
+
+        .heart-empty{
+            position: relative;
+            left: 290px;
+            bottom: 45px;
+            color: gray;
+        }
+
+
+
+        .heart {
+            
+            font-size: 19.9px;
+            position: relative;
+            
+            left: 265.3px;
+            bottom: 40.6px;
+            display: inline-block;
+            overflow: hidden;
+            background: linear-gradient(to top, $color-secondary, $color-primary 50%, transparent 50%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-size: 100% 200%;
+            transition: background-position 1s ease;
+          
+        }
+        .heart:hover {
+            background-position: 0 100%;
+        }
+       
+      
+    }
 }
