--- a/sass/pages/_main-page.scss
+++ b/sass/pages/_main-page.scss
@@ -130,7 +130,6 @@ main {
 
 .restaurants {
     width: 100%;
-    height: 1000px;
     background-color: $color-gray;
     font-weight: bold;
     font-size: 25px;
@@ -138,6 +137,7 @@ main {
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+
 
     p {
         align-self: flex-start;
@@ -155,16 +155,39 @@ main {
 
 }
 
-.card-1 {
+.cards {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @include large-screen {
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        justify-content: center
+    }
+}
+
+.card {
     @include area-shadow;
     background-color: white;
     width: 350px;
     height: 265px;
     border-radius: 20px;
 
+    @include large-screen {
+        height: 350px;
+    }
+
     img {
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
         height: 170px;
         object-fit: fill;
+
+        @include large-screen {
+            height: 250px;
+        }
 
     }
 
@@ -185,22 +208,23 @@ main {
             font-weight: normal;
         }
 
-        .heart-empty{
+        .heart-empty {
             position: relative;
             left: 290px;
             bottom: 45px;
             color: gray;
+            font-size: 25px;
         }
 
 
 
         .heart {
-            
-            font-size: 19.9px;
+
+            font-size: 25px;
             position: relative;
-            
-            left: 265.3px;
-            bottom: 40.6px;
+
+            left: 260.3px;
+            bottom: 39.5px;
             display: inline-block;
             overflow: hidden;
             background: linear-gradient(to top, $color-secondary, $color-primary 50%, transparent 50%);
@@ -209,12 +233,21 @@ main {
             -webkit-text-fill-color: transparent;
             background-size: 100% 200%;
             transition: background-position 1s ease;
-          
+
         }
+
         .heart:hover {
             background-position: 0 100%;
         }
-       
-      
+
+
     }
+}
+
+footer {
+    height: 300px;
+    width: 100%;
+    background-color: rgb(68, 67, 67);
+    color: white;
+
 }
