--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,5 +5,6 @@
 @import "./utils/mixins";
 @import "./components/buttons";
 @import "./layouts/header";
+@import "./layouts/footer";
 @import "./pages/main-page";
 
