--- a/sass/pages/_main-page.scss
+++ b/sass/pages/_main-page.scss
@@ -1,12 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 350px;
 
     @include large-screen {
         flex-direction: row;
@@ -60,12 +57,14 @@ main {
 }
 
 .how-it-works {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     @include section-block;
     font-weight: bold;
     font-size: 25px;
     padding-top: 50px;
-    align-items: flex-start;
-    padding-left: 20px;
+    padding-left: 4%;
 
     @include large-screen {
         padding-top: 10px;
@@ -74,6 +73,7 @@ main {
 
     p {
         padding-bottom: 20px;
+        padding-right: 150px;
 
     }
 
@@ -105,8 +105,8 @@ main {
         display: flex;
         align-self: center;
         border-radius: 20px;
-        width: 350px;
         height: 70px;
+        width: 340px;
         font-size: 15px;
         @include area-shadow;
         background-color: $color-gray;
@@ -130,6 +130,7 @@ main {
 
 .restaurants {
     width: 100%;
+    min-width: 350px;
     background-color: $color-gray;
     font-weight: bold;
     font-size: 25px;
@@ -186,6 +187,7 @@ main {
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         height: 170px;
+        width: 100%;
         object-fit: fill;
 
         @include large-screen {
@@ -235,14 +237,15 @@ main {
             -webkit-text-fill-color: transparent;
             background-size: 100% 200%;
             transition: background-position 1s ease;
+           
 
+
+
+            &:hover {
+              
+                 background-position: 0 100%;
+            }
         }
-
-        .heart:hover {
-            background-position: 0 100%;
-        }
-
 
     }
 }
-
