--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 
 @import "./base/typography";
-@import "./base/box-sizing";
+@import "./base/base";
 @import "./utils/variables";
 @import "./utils/mixins";
 @import "./components/buttons";
