--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -18,6 +18,7 @@
     display: flex;
     height: 470px;
     width: 100%;
+    min-width: 350px;
     flex-direction: column;
     align-items: center;
    
