--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,34 @@ footer {
   color: white;
 }
 
+.loading {
+  opacity: 70%;
+  position: fixed;
+  background-color: gray;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner {
+  z-index: 2;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 3px solid rgba(177, 8, 8, 0.3);
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: spin 1.5s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
 main {
   display: flex;
   flex-direction: column;
