--- a/sass/pages/_main-page.scss
+++ b/sass/pages/_main-page.scss
@@ -1,3 +1,33 @@
+.loading {
+    opacity: 70%;
+    position: fixed;
+    background-color: gray;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+    .spinner {
+        z-index: 2;
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        border: 3px solid rgba(177, 8, 8, 0.3);
+        border-radius: 50%;
+        border-top-color: #fff;
+        animation: spin 1.5s ease-in-out infinite;
+
+    }
+
+    @keyframes spin {
+        to {
+            transform: rotate(360deg);
+        }
+    }
+
 
 main {
     display: flex;
@@ -237,13 +267,13 @@ main {
             -webkit-text-fill-color: transparent;
             background-size: 100% 200%;
             transition: background-position 1s ease;
-           
+
 
 
 
             &:hover {
-              
-                 background-position: 0 100%;
+
+                background-position: 0 100%;
             }
         }
 
