--- a/sass/pages/_main-page.scss
+++ b/sass/pages/_main-page.scss
@@ -8,25 +8,40 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: timer .2s 4s;
+    animation-fill-mode: backwards;
+    animation-fill-mode: forwards;
+    
+
 }
 
-    .spinner {
-        z-index: 2;
-        display: inline-block;
-        width: 100px;
-        height: 100px;
-        border: 3px solid rgba(177, 8, 8, 0.3);
-        border-radius: 50%;
-        border-top-color: #fff;
-        animation: spin 1.5s ease-in-out infinite;
-
+@keyframes timer {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
     }
 
-    @keyframes spin {
-        to {
-            transform: rotate(360deg);
-        }
+}
+
+.spinner {
+    z-index: 2;
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    border: 3px solid rgba(177, 8, 8, 0.3);
+    border-radius: 50%;
+    border-top-color: #fff;
+    animation: spin 1.5s ease-in-out infinite;
+
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
     }
+}
 
 
 main {
