working on menu item animation

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,9 @@
 @import "./utils/variables";
 @import "./utils/mixins";
 @import "./components/buttons";
+@import "./components/heart";
+@import "./components/menu-items";
 @import "./layouts/header";
 @import "./layouts/footer";
 @import "./pages/main-page";
-
+@import "./pages/menu-page";
