--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,157 @@ html {
   box-shadow: 0px 5px 15px 8px #bbbbbb;
 }
 
+.container {
+  display: block;
+  height: 50px;
+  width: 100%;
+  padding-left: 12px;
+  padding-top: 12px;
+}
+.container h2 {
+  width: 100px;
+  margin: 0px;
+}
+.container .like-button {
+  padding: 0px;
+  font-size: 20px;
+  font-weight: normal;
+}
+.container .heart-empty {
+  position: relative;
+  left: 270px;
+  bottom: 50px;
+  color: gray;
+  font-size: 25px;
+}
+.container .heart {
+  font-size: 25.1px;
+  position: relative;
+  left: 239px;
+  bottom: 43.8px;
+  display: inline-block;
+  overflow: hidden;
+  background: linear-gradient(to top, #FF79DA, #9356DC 50%, transparent 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 100% 200%;
+  transition: background-position 1s ease;
+}
+.container .heart:hover {
+  background-position: 0 100%;
+}
+
+.container__menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+@media screen and (min-width: 768px) {
+  .container__menu {
+    flex-direction: column;
+    width: 50px;
+    padding: 0px;
+  }
+}
+
+.heart-empty-menu {
+  position: relative;
+  left: 0px;
+  bottom: 30px;
+  color: gray;
+  font-size: 25px;
+}
+@media screen and (min-width: 768px) {
+  .heart-empty-menu {
+    bottom: 10px;
+  }
+}
+
+.heart-menu {
+  font-size: 25.1px;
+  position: relative;
+  left: -28.6px;
+  bottom: 23.8px;
+  display: inline-block;
+  overflow: hidden;
+  background: linear-gradient(to top, #FF79DA, #9356DC 50%, transparent 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 100% 200%;
+  transition: background-position 1s ease;
+}
+@media screen and (min-width: 768px) {
+  .heart-menu {
+    bottom: 3.8px;
+  }
+}
+.heart-menu:hover {
+  background-position: 0 100%;
+}
+
+.entrees {
+  display: flex;
+  height: 470px;
+  width: 100%;
+  min-width: 350px;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .entrees {
+    width: 600px;
+    height: 390px;
+    margin-top: 10px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 15px 5px #bbbbbb;
+    background-color: rgba(220, 211, 211, 0.595);
+  }
+}
+
+.food-card {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10%;
+  overflow: hidden;
+  box-shadow: 0px 5px 15px 5px #bbbbbb;
+  padding-top: 8px;
+  padding-left: 10px;
+  width: 350px;
+  height: 55px;
+  border-radius: 15px;
+}
+.food-card:active > .card-animation {
+  animation: animation-move 1.5s;
+}
+
+.food-card__text {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.card-animation {
+  width: 100px;
+  height: 55px;
+  position: relative;
+  bottom: 8px;
+  left: 49px;
+  display: flex;
+  align-items: center;
+  border-radius: 15px;
+  transform-origin: right;
+  background: #99E2D0;
+}
+
+@keyframes animation-move {
+  0% {
+    transform: translate(0%);
+  }
+  100% {
+    transform: translate(-100%);
+  }
+}
 .header {
   height: 6 0px;
   font-size: 35px;
@@ -111,7 +262,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: timer 0.2s 4s;
+  animation: timer 0.2s 1s;
   animation-fill-mode: backwards;
   animation-fill-mode: forwards;
 }
@@ -164,6 +315,9 @@ main {
   align-items: center;
   gap: 50px;
   background-color: #e2dddd;
+}
+.company-info a:link {
+  text-decoration: none;
 }
 @media screen and (min-width: 768px) {
   .company-info {
@@ -311,6 +465,19 @@ main {
   flex-direction: column;
   gap: 40px;
 }
+.cards a:link {
+  text-decoration: none;
+  color: black;
+}
+.cards a:visited {
+  color: black;
+}
+.cards a:hover {
+  color: black;
+}
+.cards a:active {
+  color: black;
+}
 @media screen and (min-width: 768px) {
   .cards {
     flex-direction: row;
@@ -325,6 +492,7 @@ main {
   width: 350px;
   height: 265px;
   border-radius: 20px;
+  font-size: 25px;
 }
 @media screen and (min-width: 768px) {
   .card {
@@ -344,43 +512,93 @@ main {
     height: 250px;
   }
 }
-.card__container {
-  height: 50px;
-  padding-left: 12px;
-  padding-top: 12px;
-}
-.card__container h3 {
+.card h3 {
+  padding: 0%;
   font-size: 25px;
-  width: 200px;
 }
-.card__container p {
-  padding: 0px;
+.card p {
+  padding: 0%;
   font-size: 20px;
   font-weight: normal;
 }
-.card__container .heart-empty {
-  position: relative;
-  left: 250px;
-  bottom: 45px;
-  color: gray;
+
+header {
+  display: flex;
+  flex-direction: column;
+}
+header a:link {
+  color: black;
+  text-decoration: none;
+}
+header a:visited {
+  color: black;
+}
+header i {
+  padding-right: 50px;
   font-size: 25px;
 }
-.card__container .heart {
-  font-size: 25px;
-  position: relative;
-  left: 220.3px;
-  bottom: 39.5px;
-  display: inline-block;
-  overflow: hidden;
-  background: linear-gradient(to top, #FF79DA, #9356DC 50%, transparent 50%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 100% 200%;
-  transition: background-position 1s ease;
+header img {
+  height: 330px;
+  width: 100%;
 }
-.card__container .heart:hover {
-  background-position: 0 100%;
+@media screen and (min-width: 768px) {
+  header img {
+    width: 700px;
+  }
+}
+@media screen and (min-width: 768px) {
+  header {
+    background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  }
+}
+
+.name {
+  display: flex;
+  height: 470px;
+  width: 100%;
+  min-width: 350px;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  bottom: 100px;
+  width: 100%;
+  height: 110px;
+  background-color: #c1bcbc;
+  border-top-left-radius: 35px;
+  border-top-right-radius: 35px;
+  align-items: flex-start;
+  justify-content: center;
+  padding-left: 10px;
+}
+@media screen and (min-width: 768px) {
+  .name {
+    width: 600px;
+    height: 390px;
+    margin-top: 10px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 15px 5px #bbbbbb;
+    background-color: rgba(220, 211, 211, 0.595);
+  }
+}
+@media screen and (min-width: 768px) {
+  .name {
+    padding: 0px;
+    margin: 0px;
+    width: 200px;
+    min-width: 170px;
+    height: 350px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.name i {
+  padding-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .name {
+    bottom: 0px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
