worked on menu item animation, and fade in animation

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -41,3 +41,10 @@
     }
 
 }
+
+.order-button{
+    padding-top: 30px;
+    padding-bottom: 90px;
+    margin-left: 190px;
+    margin-right: 190px;
+}
