--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,13 @@ html {
   box-shadow: 0px 5px 15px 8px #bbbbbb;
 }
 
+.order-button {
+  padding-top: 30px;
+  padding-bottom: 90px;
+  margin-left: 190px;
+  margin-right: 190px;
+}
+
 .container {
   display: block;
   height: 50px;
@@ -108,7 +115,8 @@ html {
 }
 @media screen and (min-width: 768px) {
   .container__menu {
-    flex-direction: column;
+    gap: 420px;
+    flex-direction: row;
     width: 50px;
     padding: 0px;
   }
@@ -117,13 +125,13 @@ html {
 .heart-empty-menu {
   position: relative;
   left: 0px;
-  bottom: 30px;
+  bottom: 13px;
   color: gray;
   font-size: 25px;
 }
 @media screen and (min-width: 768px) {
   .heart-empty-menu {
-    bottom: 10px;
+    bottom: 7px;
   }
 }
 
@@ -150,57 +158,165 @@ html {
   background-position: 0 100%;
 }
 
-.entrees {
+.menu-area {
   display: flex;
   height: 470px;
   width: 100%;
   min-width: 350px;
   flex-direction: column;
   align-items: center;
+  background-color: #dcd3d3;
+  align-items: flex-start;
+  justify-content: flex-start;
+  justify-self: flex-start;
+  position: relative;
+  gap: 20px;
+  height: 350px;
+  margin-bottom: 20px;
+  width: 360px;
+}
+.menu-area__fade {
+  z-index: 2;
+  position: absolute;
+  width: 107%;
+  background-color: #dcd3d3;
+  height: 104%;
+  right: -3px;
+  animation: fade-in 1.5s 0.7s;
+  animation-fill-mode: backwards;
+  animation-fill-mode: forwards;
 }
 @media screen and (min-width: 768px) {
-  .entrees {
+  .menu-area__fade {
+    height: 108%;
+    left: -12px;
+    bottom: -22px;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 0%;
+  }
+}
+.menu-area__fade-2 {
+  animation-delay: 1.5s;
+}
+.menu-area__fade-3 {
+  animation-delay: 2s;
+}
+@media screen and (min-width: 768px) {
+  .menu-area {
     width: 600px;
     height: 390px;
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px #bbbbbb;
-    background-color: rgba(220, 211, 211, 0.595);
+    background-color: #dcd3d3;
+  }
+}
+.menu-area h3 {
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .menu-area {
+    justify-content: center;
+    align-items: center;
+    bottom: 0px;
+    padding-top: 20px;
   }
 }
 
 .food-card {
-  display: flex;
-  justify-content: flex-start;
-  gap: 10%;
   overflow: hidden;
   box-shadow: 0px 5px 15px 5px #bbbbbb;
   padding-top: 8px;
   padding-left: 10px;
   width: 350px;
-  height: 55px;
+  height: 75px;
   border-radius: 15px;
+}
+.food-card h4 {
+  margin-bottom: 10px;
 }
 .food-card:active > .card-animation {
   animation: animation-move 1.5s;
+  animation-fill-mode: forwards;
+}
+.food-card:active > .cost {
+  animation: animation-cost 1.5s;
+  animation-delay: 150ms;
+  animation-fill-mode: forwards;
+}
+.food-card:active > .food-card__text {
+  animation: animation-text 1.5s;
+  animation-delay: 150ms;
+  animation-fill-mode: forwards;
+}
+.food-card:active > .card-animation i {
+  animation: spin 0.9s ease-in-out 1;
 }
 
 .food-card__text {
+  width: 300px;
   white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.card-animation {
-  width: 100px;
-  height: 55px;
+@keyframes animation-text {
+  0% {
+    transform: scaleX(100%);
+  }
+  100% {
+    transform: scaleX(100%);
+  }
+}
+.cost {
+  height: 50px;
+  width: 30px;
   position: relative;
-  bottom: 8px;
-  left: 49px;
+  bottom: 19px;
+  left: 290px;
+}
+
+@keyframes animation-cost {
+  0% {
+    transform: translate(0%);
+  }
+  100% {
+    transform: translate(-230%);
+  }
+}
+.card-animation {
   display: flex;
   align-items: center;
+  justify-content: center;
+  width: 85px;
+  height: 75px;
+  position: relative;
+  bottom: 105px;
+  left: 340px;
   border-radius: 15px;
-  transform-origin: right;
   background: #99E2D0;
+}
+.card-animation i {
+  color: #99E2D0;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  font-size: 20px;
+  background-color: white;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes animation-move {
@@ -208,11 +324,10 @@ html {
     transform: translate(0%);
   }
   100% {
-    transform: translate(-100%);
+    transform: translate(-99%);
   }
 }
 .header {
-  height: 6 0px;
   font-size: 35px;
   display: flex;
   justify-content: center;
@@ -326,7 +441,7 @@ main {
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px #bbbbbb;
-    background-color: rgba(220, 211, 211, 0.595);
+    background-color: #dcd3d3;
   }
 }
 @media screen and (min-width: 768px) {
@@ -340,7 +455,7 @@ main {
   bottom: 2px;
   justify-content: center;
   align-items: center;
-  background-color: rgba(220, 211, 211, 0.595);
+  background-color: #dcd3d3;
   height: 45px;
   width: 100%;
   font-weight: bold;
@@ -383,7 +498,7 @@ main {
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px #bbbbbb;
-    background-color: rgba(220, 211, 211, 0.595);
+    background-color: #dcd3d3;
   }
 }
 @media screen and (min-width: 768px) {
@@ -424,7 +539,7 @@ main {
   width: 340px;
   font-size: 15px;
   box-shadow: 0px 5px 15px 5px #bbbbbb;
-  background-color: rgba(220, 211, 211, 0.595);
+  background-color: #dcd3d3;
   padding-top: 25px;
   padding-right: 50px;
 }
@@ -438,7 +553,7 @@ main {
 .restaurants {
   width: 100%;
   min-width: 350px;
-  background-color: rgba(220, 211, 211, 0.595);
+  background-color: #dcd3d3;
   font-weight: bold;
   font-size: 25px;
   display: flex;
@@ -522,34 +637,43 @@ main {
   font-weight: normal;
 }
 
-header {
+.header-menu {
+  background-color: #dcd3d3;
   display: flex;
   flex-direction: column;
 }
-header a:link {
+.header-menu a:link {
   color: black;
   text-decoration: none;
 }
-header a:visited {
+.header-menu a:visited {
   color: black;
 }
-header i {
+.header-menu i {
   padding-right: 50px;
   font-size: 25px;
 }
-header img {
+.header-menu img {
+  border-radius: 10px;
   height: 330px;
   width: 100%;
 }
 @media screen and (min-width: 768px) {
-  header img {
+  .header-menu img {
     width: 700px;
   }
 }
 @media screen and (min-width: 768px) {
-  header {
+  .header-menu {
+    height: 430px;
     background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   }
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  background-color: #dcd3d3;
 }
 
 .name {
@@ -559,16 +683,18 @@ header img {
   min-width: 350px;
   flex-direction: column;
   align-items: center;
+  font-size: 20px;
   position: relative;
-  bottom: 100px;
+  bottom: 30px;
   width: 100%;
-  height: 110px;
-  background-color: #c1bcbc;
+  height: 50px;
+  background-color: #dcd3d3;
   border-top-left-radius: 35px;
   border-top-right-radius: 35px;
   align-items: flex-start;
   justify-content: center;
   padding-left: 10px;
+  padding-top: 50px;
 }
 @media screen and (min-width: 768px) {
   .name {
@@ -577,28 +703,23 @@ header img {
     margin-top: 10px;
     border-radius: 20px;
     box-shadow: 0px 5px 15px 5px #bbbbbb;
-    background-color: rgba(220, 211, 211, 0.595);
+    background-color: #dcd3d3;
   }
 }
 @media screen and (min-width: 768px) {
   .name {
+    bottom: 40px;
     padding: 0px;
     margin: 0px;
-    width: 200px;
-    min-width: 170px;
-    height: 350px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 600px;
+    height: 100px;
+    padding-top: 12px;
+    padding-left: 12px;
+    background: linear-gradient(to bottom right, #99E2D0, #9356DC);
   }
 }
 .name i {
   padding-top: 10px;
-}
-@media screen and (min-width: 768px) {
-  .name {
-    bottom: 0px;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
