--- a/sass/pages/_menu-page.scss
+++ b/sass/pages/_menu-page.scss
@@ -1,6 +1,9 @@
-header{
+.header-menu{
+    background-color: $color-gray;
+  
     display: flex;
     flex-direction: column;
+    
     a:link{
         color: black;
         text-decoration: none;
@@ -12,61 +15,73 @@ header{
     }
 
     i{
+      
         padding-right: 50px;
         font-size: 25px;
     }
     img{
+        border-radius: 10px;
         height: 330px;
         width: 100%;
+      
         @include large-screen{
-            width: 700px;
+           
+           width: 700px;
         }
     }
     @include large-screen{
+        height: 430px;
         background: linear-gradient(to bottom right, $color-secondary, $color-primary);
     }
 }
 
 
+.menu{
+    display: flex;
+    justify-content: center;
 
+    background-color: $color-gray;
+}
 
 
 .name{
+    
 
     @include section-block;
+    font-size: 20px;
     position: relative;
-    bottom: 100px;
+    bottom: 30px;
     width: 100%;
-    height: 110px;
-    background-color: rgb(193, 188, 188);
+    height: 50px;
+    background-color: $color-gray;
     border-top-left-radius: 35px;
     border-top-right-radius: 35px;
     align-items: flex-start;
     justify-content: center;
     padding-left: 10px;
+    padding-top: 50px;
+  
+
     @include large-screen{
+
+        bottom: 40px;
         padding: 0px;
         margin: 0px;
-      
-        width: 200px;
-        min-width: 170px;
-        height: 350px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        
-      
+        width: 600px;
+        height: 100px;
+        padding-top: 12px;
+        padding-left: 12px;
+        background: linear-gradient(to bottom right, $color-tertiary, $color-primary);
+
 
     }
    
   
-   
     i{
         padding-top: 10px;
     }
 
-    @include large-screen{
-        bottom: 0px;
-    }
+  
 }
+
 
