--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -10,27 +10,29 @@
         margin: 0px;
     }
 
+    i{
+        width: 25px;
+    }
+
 
 
 
 
     .heart-empty {
         position: absolute;
-
-
         color: gray;
         font-size: 25px;
+        width: 25px;
 
     }
 
 
 
     .heart {
-
+        
+        width: 25px;
         font-size: 25.1px;
         position: absolute;
-
-
         display: inline-block;
         overflow: hidden;
         background: linear-gradient(to top, $color-secondary, $color-primary 50%, transparent 50%);
@@ -61,7 +63,8 @@
     &__menu {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        gap: 50%;
+       
 
         @include large-screen {
             gap: 420px;
@@ -72,7 +75,7 @@
     }
 
     &__heart {
-        background-color: aqua;
+      
         position: relative;
         bottom: 9px;
     }
