--- a/sass/components/_menu-items.scss
+++ b/sass/components/_menu-items.scss
@@ -86,6 +86,10 @@
         margin-bottom: 10px;
     }
 
+    &:hover {
+        cursor: pointer;
+    }
+
     &:active {
         &>.card-animation {
 
